--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/node-projects/diagram-designer-demo#readme",
   "devDependencies": {
-    "@web/dev-server": "^0.2.4",
+    "@web/dev-server": "^0.2.5",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "@node-projects/base-custom-webcomponent": "^0.11.0",
-    "@node-projects/web-component-designer": "^0.0.240",
+    "@node-projects/web-component-designer": "^0.0.241",
+    "codemirror": "^5.65.13",
     "dock-spawn-ts": "^2.514.0",
     "es-module-shims": "^1.7.3",
     "jquery": "^3.7.0",
